[gd_scene load_steps=4 format=3 uid="uid://me0yimigov51"]

[ext_resource type="Script" path="res://Scripts/Components/damage_element.gd" id="1_5usg4"]
[ext_resource type="Texture2D" uid="uid://b5scot74y7l6i" path="res://Images/Attacks/projectile-aoe.png" id="2_ly1ck"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bty4v"]
radius = 48.0

[node name="Iceball Explosion" type="Area2D"]
collision_layer = 8
script = ExtResource("1_5usg4")
damage_amount = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bty4v")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_ly1ck")
region_enabled = true
region_rect = Rect2(6, 71, 51, 51)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
